--- a/static/html/admin/index.html
+++ b/static/html/admin/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
 
-<!--
-    TODO: Vue.js 生产环境！
--->
-
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Musharing Admin">
@@ -16,10 +12,10 @@
     <!-- Vue.js -->
 
     <!-- development version, includes helpful console warnings -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
 
     <!-- production version, optimized for size and speed -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 
     <!-- Bootstrap @3.3.7 -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
